# apps/api/app/main.py
@@ -7,7 +7,15 @@ from fastapi.middleware.cors import CORSMiddleware
 
 from app.db.database import engine, init_db
 from app.dependencies.auth import get_current_user
-from app.routers import auth_router, chat_router, files_router, ingestion_runs_router, rag_router
+from app.routers import (
+    auth_router,
+    chat_router,
+    courses_router,
+    files_router,
+    folders_router,
+    ingestion_runs_router,
+    rag_router,
+)
 
 
 @asynccontextmanager
@@ -39,9 +47,22 @@ app.include_router(
     chat_router, prefix="/chat", tags=["Chat"], dependencies=[Depends(get_current_user)]
 )
 app.include_router(
-    ingestion_runs_router, prefix="/ingestion-runs", tags=["Ingestion Runs"], dependencies=[Depends(get_current_user)],
+    ingestion_runs_router,
+    prefix="/ingestion-runs",
+    tags=["Ingestion Runs"],
+    dependencies=[Depends(get_current_user)],
 )
-
+app.include_router(
+    courses_router,
+    prefix="/courses",
+    tags=["Courses"],
+    dependencies=[Depends(get_current_user)],
+)
+app.include_router(
+    folders_router,
+    prefix="/courses",
+    tags=["Folder"],
+)
 # CORS configuration for Web (any local port), Tauri (Desktop & Android), and Production
 origins = [
     "tauri://localhost",  # Tauri v2 Desktop custom scheme
